--- a/MCDiary/MCDiary/Resouces/XIBs/User.storyboard
+++ b/MCDiary/MCDiary/Resouces/XIBs/User.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="sck-TL-Gu2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nqR-8B-pxk">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -314,7 +314,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8SQ-Nd-cqP">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8SQ-Nd-cqP" customClass="TPKeyboardAvoidingScrollView">
                                 <rect key="frame" x="0.0" y="50" width="320" height="518"/>
                             </scrollView>
                         </subviews>
@@ -378,7 +378,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="needAssessoryButton" value="NO"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xdg-Tp-Imu" customClass="MCDButtonView">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xdg-Tp-Imu" customClass="MCDButtonView">
                                 <rect key="frame" x="165" y="448" width="130" height="50"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -410,7 +410,7 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="buttonText" value="浙江省 杭州市"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kBf-Nh-UrU" customClass="MCDButtonView">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kBf-Nh-UrU" customClass="MCDButtonView">
                                 <rect key="frame" x="25" y="448" width="130" height="50"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -467,9 +467,11 @@
                     <connections>
                         <outlet property="avatarView" destination="PKQ-lK-5tu" id="wM9-co-BzQ"/>
                         <outlet property="birthdayField" destination="dNd-RR-iHe" id="Tpo-Kk-sMf"/>
+                        <outlet property="changePasswordButton" destination="kBf-Nh-UrU" id="tLk-6s-ntI"/>
                         <outlet property="emailField" destination="AE0-nt-0Gn" id="xzf-5H-Ig0"/>
                         <outlet property="genderField" destination="hav-b4-0MQ" id="GYE-dh-agS"/>
                         <outlet property="locationField" destination="Gkr-Q8-FUn" id="rXJ-br-49q"/>
+                        <outlet property="saveInfoButton" destination="Xdg-Tp-Imu" id="4Bn-gb-hzc"/>
                         <outlet property="usernameField" destination="boG-LE-oMF" id="h0o-OW-nXJ"/>
                     </connections>
                 </viewController>
