--- a/MCDiary/MCDiary/Resouces/XIBs/User.storyboard
+++ b/MCDiary/MCDiary/Resouces/XIBs/User.storyboard
@@ -317,12 +317,63 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8SQ-Nd-cqP" customClass="TPKeyboardAvoidingScrollView">
                                 <rect key="frame" x="0.0" y="50" width="320" height="518"/>
                             </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eJb-As-LBi">
+                                <rect key="frame" x="0.0" y="20" width="320" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="萌宠日记.x" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5d-7I-fHw">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
+                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DwU-I2-t1c">
+                                        <rect key="frame" x="8" y="4" width="22" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="22" id="Che-GI-DTk"/>
+                                            <constraint firstAttribute="height" constant="22" id="hUf-nn-aFH"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.75" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" backgroundImage="Menu Button">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eoW-u8-Dip">
+                                        <rect key="frame" x="290" y="4" width="22" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="22" id="7Za-cN-xL0"/>
+                                            <constraint firstAttribute="height" constant="22" id="OW8-uh-bg1"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.75" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" backgroundImage="Logout Button">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="a5d-7I-fHw" secondAttribute="bottom" id="DEs-he-Svc"/>
+                                    <constraint firstItem="a5d-7I-fHw" firstAttribute="top" secondItem="eJb-As-LBi" secondAttribute="top" id="Kjo-u4-9jk"/>
+                                    <constraint firstAttribute="height" constant="30" id="Q5o-oO-1Ao"/>
+                                    <constraint firstAttribute="trailing" secondItem="a5d-7I-fHw" secondAttribute="trailing" id="Qgb-Ch-jYN"/>
+                                    <constraint firstAttribute="bottom" secondItem="eoW-u8-Dip" secondAttribute="bottom" constant="4" id="S82-jS-JnT"/>
+                                    <constraint firstAttribute="trailing" secondItem="eoW-u8-Dip" secondAttribute="trailing" constant="8" id="Twe-OX-7z7"/>
+                                    <constraint firstAttribute="bottom" secondItem="DwU-I2-t1c" secondAttribute="bottom" constant="4" id="cDg-RV-KoN"/>
+                                    <constraint firstItem="DwU-I2-t1c" firstAttribute="leading" secondItem="eJb-As-LBi" secondAttribute="leading" constant="8" id="hlw-X0-4Pf"/>
+                                    <constraint firstItem="a5d-7I-fHw" firstAttribute="leading" secondItem="eJb-As-LBi" secondAttribute="leading" id="jgh-za-vMr"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.31372549020000001" green="0.82352941180000006" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="8SQ-Nd-cqP" firstAttribute="leading" secondItem="byY-o3-3yO" secondAttribute="leading" id="4nU-lR-z5w"/>
                             <constraint firstAttribute="trailing" secondItem="8SQ-Nd-cqP" secondAttribute="trailing" id="BEi-dg-oTc"/>
                             <constraint firstItem="8SQ-Nd-cqP" firstAttribute="top" secondItem="jU9-M5-Njt" secondAttribute="bottom" constant="30" id="Lni-qq-54h"/>
+                            <constraint firstItem="eJb-As-LBi" firstAttribute="top" secondItem="jU9-M5-Njt" secondAttribute="bottom" id="WZV-0B-6GW"/>
+                            <constraint firstAttribute="trailing" secondItem="eJb-As-LBi" secondAttribute="trailing" id="d1G-7s-j2l"/>
+                            <constraint firstItem="eJb-As-LBi" firstAttribute="leading" secondItem="byY-o3-3yO" secondAttribute="leading" id="tCv-2s-8N8"/>
                             <constraint firstItem="2cH-3d-roe" firstAttribute="top" secondItem="8SQ-Nd-cqP" secondAttribute="bottom" id="z8i-yR-ih9"/>
                         </constraints>
                     </view>
@@ -589,6 +640,8 @@
     <resources>
         <image name="AvatarDemo" width="85" height="85"/>
         <image name="Logo" width="129" height="100"/>
+        <image name="Logout Button" width="17" height="19"/>
+        <image name="Menu Button" width="19" height="15"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
