--- a/MCDiary/MCDiary/Resouces/XIBs/User.storyboard
+++ b/MCDiary/MCDiary/Resouces/XIBs/User.storyboard
@@ -378,6 +378,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="openMenuButton" destination="DwU-I2-t1c" id="wBe-cS-pLG"/>
                         <outlet property="scrollView" destination="8SQ-Nd-cqP" id="y7i-zV-Xrt"/>
                     </connections>
                 </viewController>
